--- a/Hosts/ASF.Hosts.Web/web.config
+++ b/Hosts/ASF.Hosts.Web/web.config
@@ -8,9 +8,9 @@
   </appSettings>
   <connectionStrings>
     <!-- Encrypt your connection strings (See https://msdn.microsoft.com/en-us/library/dtkwfdky.aspx). -->
-    <add name="ASF" connectionString="Data Source=.\sqlexpress;Initial Catalog=LeatherGoods;Persist Security Info=True;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=LeatherGoods;Persist Security Info=True;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
-    <add name="default" connectionString="Data Source=.\sqlexpress;Initial Catalog=LeatherGoods;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
+    <add name="ASF" connectionString="Data Source=.\sql_uai;Initial Catalog=LeatherGoods;Persist Security Info=True;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\sql_uai;Initial Catalog=LeatherGoods;Persist Security Info=True;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
+    <add name="default" connectionString="Data Source=.\sql_uai;Initial Catalog=LeatherGoods;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.serviceModel>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true">
