--- a/Presentation/ASF.UI.WbSite/packages.config
+++ b/Presentation/ASF.UI.WbSite/packages.config
@@ -6,6 +6,7 @@
   <package id="Autofac.Mvc5.Owin" version="4.0.1" targetFramework="net45" />
   <package id="Autofac.Owin" version="4.1.0" targetFramework="net45" />
   <package id="Boilerplate.Web.Mvc5" version="1.0.25" targetFramework="net452" />
+  <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="bootstrap.less" version="3.3.7" targetFramework="net45" />
   <package id="Common.Logging" version="3.4.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.0" targetFramework="net45" />
