ADD Logging config

--- a/Hosts/ASF.Hosts.Web/ASF.Hosts.Web.csproj
+++ b/Hosts/ASF.Hosts.Web/ASF.Hosts.Web.csproj
@@ -119,6 +119,10 @@
       <Project>{5F7C08E8-891E-41C7-9E8D-E94B75222C0B}</Project>
       <Name>ASF.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Shared\ASF.Framework\ASF.Framework.csproj">
+      <Project>{b07faacc-7f82-4fdb-9bbb-666711eef0f4}</Project>
+      <Name>ASF.Framework</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="web.config" />
