--- a/Presentation/ASF.UI.WbSite/Web.config
+++ b/Presentation/ASF.UI.WbSite/Web.config
@@ -16,8 +16,11 @@
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+      
+      
     </sectionGroup>
     <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,     log4net" />
 
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -27,6 +30,38 @@
       <section name="httpHeaderSecurityModule" type="NWebsec.Modules.Configuration.HttpHeaderSecurityConfigurationSection, NWebsec, Version=4.3.0.0, Culture=neutral, PublicKeyToken=3613da5f958908a1" requirePermission="false" />
     </sectionGroup>
   </configSections>
+
+  <log4net debug="true">
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="logs\log.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
+      </layout>
+    </appender>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %-5level %logger [request-id:%property{request-id}] - %message%newline" />
+      </layout>
+    </appender>
+
+    <logger name="ASF">
+      <appender-ref ref="ConsoleAppender" />
+      <level value="DEBUG"/>
+      
+    </logger>
+    
+    <root>
+      <level value="ERROR" />
+      <appender-ref ref="ConsoleAppender" />
+    </root>
+  </log4net>
+
+
   <appSettings>
     <!-- webpages:Version - Use version 3 of the Razor engine (See http://blogs.msdn.com/b/webdev/archive/2013/07/10/how-does-vs-determine-which-version-of-razor-engine-to-use-when-editing-razor-webpage-files.aspx). -->
     <add key="webpages:Version" value="3.0.0.0" />
@@ -205,7 +240,12 @@
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
 
       <add name="NWebsecHttpHeaderSecurityModule" type="NWebsec.Modules.HttpHeaderSecurityModule, NWebsec, Version=4.3.0.0, Culture=neutral, PublicKeyToken=3613da5f958908a1" />
+
+      <add name="HttpLogging" type="ASF.Framework.Http.HttpLoggingInterceptor"  />
+
+
     </modules>
+    
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -400,6 +440,9 @@
         <clear />
       </customHeaders>
     </httpProtocol>
+    
+    
+    
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -525,4 +568,5 @@
 
     </httpHeaderSecurityModule>
   </nwebsec>
-</configuration>
+
+  </configuration>
