--- a/Data/ASF.Data/packages.config
+++ b/Data/ASF.Data/packages.config
@@ -3,4 +3,5 @@
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Data" version="6.0.1304.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
 </packages>
