--- a/Hosts/ASF.Hosts.Web/web.config
+++ b/Hosts/ASF.Hosts.Web/web.config
@@ -7,6 +7,8 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,     log4net" />
+
   </configSections>
   <appSettings>
     <add key="pageSize" value="10" />
@@ -17,6 +19,8 @@
     <add name="DefaultConnection" connectionString="Data Source=.\sql_uai;Initial Catalog=LeatherGoods;Persist Security Info=True;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
     <add name="default" connectionString="Data Source=.\sql_uai;Initial Catalog=LeatherGoods;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
+  
   <system.serviceModel>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true">
       <serviceActivations></serviceActivations>
@@ -26,8 +30,39 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <log4net debug="true">
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="logs\log.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
+      </layout>
+    </appender>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %-5level %logger [request-id:%property{request-id}] - %message%newline" />
+      </layout>
+    </appender>
 
+    <logger name="ASF">
+      <appender-ref ref="ConsoleAppender" />
+      <level value="DEBUG"/>
+
+    </logger>
+
+    <root>
+      <level value="ERROR" />
+      <appender-ref ref="ConsoleAppender" />
+    </root>
+  </log4net>
   <system.webServer>
+    <modules>
+      <add name="HttpLogging" type="ASF.Framework.Http.HttpLoggingInterceptor"  />
+    </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*"
