--- a/Presentation/ASF.UI.WbSite/packages.config
+++ b/Presentation/ASF.UI.WbSite/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net45" />
   <package id="Autofac.Mvc5.Owin" version="4.0.1" targetFramework="net45" />
   <package id="Autofac.Owin" version="4.1.0" targetFramework="net45" />
+  <package id="AutoMapper" version="6.1.1" targetFramework="net45" />
   <package id="Boilerplate.Web.Mvc5" version="1.0.25" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="bootstrap.less" version="3.3.7" targetFramework="net45" />
@@ -20,6 +21,7 @@
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
   <package id="jQuery" version="3.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
