--- a/Shared/ASF.Framework/packages.config
+++ b/Shared/ASF.Framework/packages.config
@@ -3,5 +3,6 @@
   <package id="AntiXssLibrary" version="1.0.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.5.1" targetFramework="net45" />
   <package id="HtmlSanitizationLibrary" version="1.0.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
 </packages>
