CRUDApi - fix generic repository

--- a/Business/ASF.Business/ASF.Business.csproj
+++ b/Business/ASF.Business/ASF.Business.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractBussiness.cs" />
     <Compile Include="CategoryBusiness.cs" />
+    <Compile Include="DealerBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
