--- a/Tests/ASF.Test/ASF.Test.csproj
+++ b/Tests/ASF.Test/ASF.Test.csproj
@@ -53,12 +53,18 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ClientDACTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Business\ASF.Business\ASF.Business.csproj">
       <Project>{1290A947-F5D1-45B8-B19A-E0F9185DE46B}</Project>
       <Name>ASF.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Data\ASF.Data\ASF.Data.csproj">
+      <Project>{422eb420-d9bc-4286-9e35-e9e3058defe8}</Project>
+      <Name>ASF.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Shared\ASF.Entities\ASF.Entities.csproj">
       <Project>{5F7C08E8-891E-41C7-9E8D-E94B75222C0B}</Project>
