--- a/Hosts/ASF.Hosts.Web/web.config
+++ b/Hosts/ASF.Hosts.Web/web.config
@@ -50,7 +50,7 @@
 
     <logger name="ASF">
       <appender-ref ref="ConsoleAppender" />
-      <level value="DEBUG"/>
+      <level value="DEBUG" />
 
     </logger>
 
@@ -61,13 +61,11 @@
   </log4net>
   <system.webServer>
     <modules>
-      <add name="HttpLogging" type="ASF.Framework.Http.HttpLoggingInterceptor"  />
+      <add name="HttpLogging" type="ASF.Framework.Http.HttpLoggingInterceptor" />
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*"
-           type="System.Web.Handlers.TransferRequestHandler"
-           preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
   <entityFramework>
@@ -76,4 +74,20 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
