--- a/Services/ASF.Services.Http/ASF.Services.Http.csproj
+++ b/Services/ASF.Services.Http/ASF.Services.Http.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoryService.cs" />
+    <Compile Include="DealerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
