--- a/Data/ASF.Data/ASF.Data.csproj
+++ b/Data/ASF.Data/ASF.Data.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractDAC.cs" />
+    <Compile Include="CartDAC.cs" />
     <Compile Include="CategoryDAC.cs" />
     <Compile Include="ClientDAC.cs" />
     <Compile Include="CountryDAC.cs" />
