--- a/Services/ASF.Services.Http/ASF.Services.Http.csproj
+++ b/Services/ASF.Services.Http/ASF.Services.Http.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CartService.cs" />
     <Compile Include="CategoryService.cs" />
     <Compile Include="ClientService.cs" />
     <Compile Include="CountryService.cs" />
