--- a/Data/ASF.Data/ASF.Data.csproj
+++ b/Data/ASF.Data/ASF.Data.csproj
@@ -60,12 +60,14 @@
   <ItemGroup>
     <Compile Include="AbstractDAC.cs" />
     <Compile Include="CartDAC.cs" />
+    <Compile Include="CartItemDAC.cs" />
     <Compile Include="CategoryDAC.cs" />
     <Compile Include="ClientDAC.cs" />
     <Compile Include="CountryDAC.cs" />
     <Compile Include="DataAccessComponent.cs" />
     <Compile Include="DealerDAC.cs" />
     <Compile Include="LeatherContext.cs" />
+    <Compile Include="ProductDAC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
