--- a/Services/ASF.Services.Http/ASF.Services.Http.csproj
+++ b/Services/ASF.Services.Http/ASF.Services.Http.csproj
@@ -59,11 +59,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CartItemService.cs" />
     <Compile Include="CartService.cs" />
     <Compile Include="CategoryService.cs" />
     <Compile Include="ClientService.cs" />
     <Compile Include="CountryService.cs" />
     <Compile Include="DealerService.cs" />
+    <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
