ADD Services para Order, Rating FIX varios

--- a/Services/ASF.Services.Http/ASF.Services.Http.csproj
+++ b/Services/ASF.Services.Http/ASF.Services.Http.csproj
@@ -65,8 +65,10 @@
     <Compile Include="ClientService.cs" />
     <Compile Include="CountryService.cs" />
     <Compile Include="DealerService.cs" />
+    <Compile Include="OrderService.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RatingService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
