--- a/Business/ASF.Business/ASF.Business.csproj
+++ b/Business/ASF.Business/ASF.Business.csproj
@@ -51,8 +51,10 @@
     <Compile Include="ClientBusiness.cs" />
     <Compile Include="CountryBusiness.cs" />
     <Compile Include="DealerBusiness.cs" />
+    <Compile Include="OrderBusiness.cs" />
     <Compile Include="ProductBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RatingBusiness.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Data\ASF.Data\ASF.Data.csproj">
