--- a/Data/ASF.Data/ASF.Data.csproj
+++ b/Data/ASF.Data/ASF.Data.csproj
@@ -67,8 +67,13 @@
     <Compile Include="DataAccessComponent.cs" />
     <Compile Include="DealerDAC.cs" />
     <Compile Include="LeatherContext.cs" />
+    <Compile Include="OrderDAC.cs" />
+    <Compile Include="OrderDetailDAC.cs" />
+    <Compile Include="OrderNumberDAC.cs" />
     <Compile Include="ProductDAC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RatingDAC.cs" />
+    <Compile Include="SettingDAC.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\ASF.Entities\ASF.Entities.csproj">
