--- a/Hosts/ASF.Hosts.Web/ASF.Hosts.Web.csproj
+++ b/Hosts/ASF.Hosts.Web/ASF.Hosts.Web.csproj
@@ -139,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
