--- a/Presentation/ASF.UI.Process/ASF.UI.Process.csproj
+++ b/Presentation/ASF.UI.Process/ASF.UI.Process.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProductProcess.cs" />
+    <Compile Include="DealerProcess.cs" />
+    <Compile Include="CartProcess.cs" />
     <Compile Include="CategoryProcess.cs" />
     <Compile Include="MediaType.cs" />
     <Compile Include="ProcessComponent.cs" />
