--- a/Presentation/ASF.UI.WbSite/Web.config
+++ b/Presentation/ASF.UI.WbSite/Web.config
@@ -93,8 +93,8 @@
   </appSettings>
   <connectionStrings>
     <!-- Encrypt your connection strings (See https://msdn.microsoft.com/en-us/library/dtkwfdky.aspx). -->
-    <add name="ASF" connectionString="Data Source=.\sqlexpress;Initial Catalog=LeatherGoods;Persist Security Info=True;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=LeatherGoods;Persist Security Info=True;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
+    <add name="ASF" connectionString="Data Source=.\sql_uai;Initial Catalog=LeatherGoods;Persist Security Info=True;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\sql_uai;Initial Catalog=LeatherGoods;Persist Security Info=True;User ID=admin;Password=zaq12wsx" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
